--- a/_posts/2016-02-16-组件化实践篇.md
+++ b/_posts/2016-02-16-组件化实践篇.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: iOS组件化探索之路(理论篇)
+date: 2017-3-15
+tags: 能工巧匠集
+
+---
+
 ### iOS组件化探索之路(实践篇)
 - 上篇主要讲了组件化的一些基本概念和解决方案,然而没有实践的支撑并没有什么卵用,本篇以图文的形式详细讲解组件化的步骤以及探索过程中的各种解决方法的对比.
 
