--- a/_posts/2017-10-3-003.md
+++ b/_posts/2017-10-3-003.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Mac命令行科学上网
-date: 2017-10-05
+date: 2017-10-3
 tags: 能工巧匠集
 
 ---
@@ -17,13 +17,17 @@ tags: 能工巧匠集
 ### 1.ClashX(推荐使用)
 - [下载地址](https://github.com/yichengchen/clashX/releases)
 - 配置: 根据网络提供商配置好相关条件
-![Xnip2020-05-15_13-58-03](/media/14973778801128/Xnip2020-05-15_13-58-03.jpg)
+![twoBank1](/media/14973778801128/twoBank1.jpg)
+
+
 
 - 使用: 复制到终端命令即刻
-![Xnip2020-05-15_14-00-53](/media/14973778801128/Xnip2020-05-15_14-00-53.jpg)
+![twoBank3](/media/14973778801128/twoBank3.jpg)
+
 
 - 测试: Github中Clone代码速度可达M级别
-![Xnip2020-05-15_14-05-27](/media/14973778801128/Xnip2020-05-15_14-05-27.jpg)
+
+![twoBank4](/media/14973778801128/twoBank4.jpg)
 
 
 
