--- a/_posts/2019-03-05-001.md
+++ b/_posts/2019-03-05-001.md
@@ -13,8 +13,6 @@ tags: 能工巧匠集
 </p> 
 
 
-## 前言
-关于我和WebSocket的缘：我从大二在计算机网络课上听老师讲过之后，第一次使用就到了毕业之后的第一份工作。直到最近换了工作，到了一家是含有IM社交聊天功能的app的时候，我觉得我现在可以谈谈我对WebSocket/Socket的一些看法了。要想做IM聊天app，就不得不理解WebSocket和Socket的原理了，听我一一道来。
 
 
 ## 目录
@@ -316,13 +314,8 @@ didReceiveMessage方法是必须实现的，用来接收消息的。
 以上就是我想分享的一些关于Websocket的心得，文中如果有错误的地方，欢迎大家指点！一般没有微信QQ那么大用户量的app，用Websocket应该都可以完成IM社交聊天的任务。当用户达到亿级别，应该还有很多需要优化，优化性能各种的吧。
 
  
-最后，微信和QQ的实现方法也许并不是只用Websocket和Socket这么简单，也许是他们自己开发的一套能支持这么大用户，大数据的，各方面也都优化都最优的方法。如果有开发和微信和QQ的大神看到这篇文章，可以留言说说看你们用什么方式实现的，也可以和我们一起分享，我们一起学习！我先谢谢大神们的指点了！
+最后，微信和QQ的实现方法也许并不是只用Websocket和Socket这么简单，也许是他们自己开发的一套能支持这么大用户，大数据的，各方面也都优化都最优的方法。
 
 
 
 
-> GitHub Repo：[Halfrost-Field](https://github.com/halfrost/Halfrost-Field)
-> 
-> Follow: [halfrost · GitHub](https://github.com/halfrost)
->
-> Source: [https://halfrost.com/ios\_weixin\_qq\_websocket/](https://halfrost.com/ios_weixin_qq_websocket/)
