--- a/_posts/2019-07-30-003.md
+++ b/_posts/2019-07-30-003.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 我们所说的数字签名
-date: 2019-07-30
+title: 密码学的一些探索之数字签名
+date: 2019-08-02
 tags: 能工巧匠集
 
 ---
@@ -915,9 +915,3 @@ Verification Failure
 Reference：
   
 《图解密码技术》        
-
-> GitHub Repo：[Halfrost-Field](HTTPS://github.com/halfrost/Halfrost-Field)
-> 
-> Follow: [halfrost · GitHub](HTTPS://github.com/halfrost)
->
-> Source: [https://halfrost.com/digital\_signature/](https://halfrost.com/digital_signature/)
