--- a/_posts/2019-08-05-004.md
+++ b/_posts/2019-08-05-004.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: 经常打交道的公钥证书
-date: 2019-08-05
+title: 密码学的一些探索之公钥证书
+date: 2019-08-10
 tags: 能工巧匠集
 
---
+---
 
 
 <p align='center'>
@@ -182,8 +182,3 @@ Reference：
   
 《图解密码技术》        
 
-> GitHub Repo：[Halfrost-Field](HTTPS://github.com/halfrost/Halfrost-Field)
-> 
-> Follow: [halfrost · GitHub](HTTPS://github.com/halfrost)
->
-> Source: [https://halfrost.com/digital\_certificate/](https://halfrost.com/digital_certificate/)
